Fix white bar under header on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -207,7 +207,7 @@ header {
         }
     }
 
-    @media (min-width: 768px) {
+    @media (min-width: 200px) {
         min-height: 100%;
         .header-content {
             position: absolute;
